v0.0.1 - unknown date:
    - UI deisigned, backend classes for managing database tables done

v0.1.1 - 11-24-2021:
    - Goodies
        - Mostly working login, register, and edit business pages
        - Fully working register page
        - Mostly working edit business page
        - Working but not good looking switch business page
    - Techies
        - PHP fuctions for managing authTokens
        - js function for shaking input fields (or any element)
        - js functions for showing/hiding form error messages

v0.1.2 - 11-24-2021:
    - Techies
        - Fixed wrong create account url after installing

v0.1.3 - 11-24-2021:
    - Techies
        - Fixed createbusiness script not adding to the table
v0.1.4 - 11-24-2021:
    - Techies
        - Fixed username and email being case sensitive
v0.1.5 - 11-24-2021:
    - Goodies
        - New global font
        - Admin: Mobile Nav bar and desktop sidebar now show appropriate buttons depending on the plan that the current business is subscribed to