@@ -25,4 +25,6 @@ v0.1.4 - 11-24-2021:
 v0.1.5 - 11-24-2021:
     - Goodies
         - New global font
-        - Admin: Mobile Nav bar and desktop sidebar now show appropriate buttons depending on the plan that the current business is subscribed to
+        - Admin: Mobile Nav bar and desktop sidebar now show "More" button instead of "Inventory" button. When this button is clicked, a menu will apear with the extra options
+    - Techies
+        - Changed the way business plans are stored (again)
